* Makefile: Correct path names. 	* Mono.Documentation/monodocer.cs: Better support nested types. 	* Test/DocTest-v1.cs: Add 4 levels of nested types. 	* Test/en.expected.importslashdoc/index.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/Widget.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/Widget+NestedClass+Double+Triple.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/Widget+NestedClass+Double.xml, 	  Test/en.expected.since/index.xml, 	  Test/en.expected.since/Mono.DocTest/Widget.xml, 	  Test/en.expected.since/Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.xml, 	  Test/en.expected.since/Mono.DocTest/Widget+NestedClass+Double+Triple.xml, 	  Test/en.expected.since/Mono.DocTest/Widget+NestedClass+Double.xml, 	  Test/en.expected/index.xml, 	  Test/en.expected/Mono.DocTest/Widget.xml, 	  Test/en.expected/Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.xml, 	  Test/en.expected/Mono.DocTest/Widget+NestedClass+Double+Triple.xml, 	  Test/en.expected/Mono.DocTest/Widget+NestedClass+Double.xml, 	  Test/html.expected/index.html, 	  Test/html.expected/Mono.DocTest/index.html, 	  Test/html.expected/Mono.DocTest/Widget.html, 	  Test/html.expected/Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.html, 	  Test/html.expected/Mono.DocTest/Widget+NestedClass+Double+Triple.html, 	  Test/html.expected/Mono.DocTest/Widget+NestedClass+Double.html, 	  Test/msxdoc-expected.importslashdoc.xml: Flush.
svn path=/trunk/mcs/; revision=116807

--- a/mdoc/Makefile
+++ b/mdoc/Makefile
@@ -26,8 +26,8 @@ MDOC_TEST_FILES = \
 	Test/validate.check.monodocer                             \
 	Test/validate.check.monodocer.importslashdoc              \
 	Test/validate.check.monodocer.since                       \
-	$(shell find Test/Test/en.expected* -name \*.xml)      \
-	$(shell find Test/Test/html.expected* -name \*.html)
+	$(shell find Test/en.expected* -name \*.xml)      \
+	$(shell find Test/html.expected* -name \*.html)
 
 EXTRA_DISTFILES = \
 	$(MDOC_RESOURCES) \
@@ -77,7 +77,7 @@ Test/DocTest.dll-v2:
 	$(MAKE) TEST_CSCFLAGS=$(TEST_CSCFLAGS) Test/DocTest.dll
 
 check-monodocer-update: mdoc.exe
-	find Test/Test/en.expected -name \*.xml -exec rm "{}" \;
+	find Test/en.expected -name \*.xml -exec rm "{}" \;
 	$(MAKE) Test/DocTest.dll-v1
 	$(MONO) mdoc.exe update -o Test/en.expected Test/DocTest.dll
 
