+ Giving up on getting mdoc to fully work under .NET; specifically, 	  mdoc-export-html makes use of many Mono XSLT "extensions" (part of 	  XSLT 2.0, apparently) which .NET doesn't support.  To run mdoc under 	  .NET, use mdoc-net.exe, which is a "static" mdoc.exe, including the 	  sources for BOTH monodoc.dll AND Mono's System.Xml.dll in the binary. 	  Yes, this makes it huge.
	* . (svn:ignore): Ignore generated files.
	* Makefile: If the NET variable is present (e.g. 'make NET=1'),
	  generate mdoc-net.exe instead of mdoc.exe, otherwise generate
	  mdoc.exe (the default, with normal dependencies).  When NET is
	  present, also create a 'mdoc-net' directory which contains
	  mdoc-net.exe and all assembly dependencies (to make it easier to
	  grab all the deps at once).
	* mdoc-net.exe.sources: Added; sources to use for mdoc-net.exe.
	* Mono.Documentation/monodocs2html.cs: Ensure that the "Index" XSLT
	  variable is set before generating output.

svn path=/trunk/mcs/; revision=146942

--- a/mdoc/Makefile
+++ b/mdoc/Makefile
@@ -2,7 +2,7 @@ thisdir = tools/mdoc
 SUBDIRS = 
 include ../../build/rules.make
 
-LOCAL_MCS_FLAGS = \
+MDOC_COMMON_FLAGS = \
 	/resource:../monodoc/Resources/mdoc-html-format.xsl,mdoc-html-format.xsl    \
 	/resource:../monodoc/Resources/mdoc-html-utils.xsl,mdoc-html-utils.xsl      \
 	/resource:../monodoc/Resources/mdoc-sections-css.xsl,mdoc-sections-css.xsl  \
@@ -13,8 +13,28 @@ LOCAL_MCS_FLAGS = \
 	/resource:Resources/stylesheet.xsl,stylesheet.xsl                           \
 	/r:System.Web.dll                                                           \
 	/r:ICSharpCode.SharpZipLib.dll                                              \
-	/r:$(topdir)/class/lib/net_2_0/monodoc.dll                                  \
 	/r:$(topdir)/class/lib/net_2_0/Mono.Cecil.dll
+
+ifndef NET
+LOCAL_MCS_FLAGS = $(MDOC_COMMON_FLAGS) \
+	/r:$(topdir)/class/lib/net_2_0/monodoc.dll
+PROGRAM = mdoc.exe
+PROGRAM_DEPS = $(topdir)/class/lib/net_2_0/monodoc.dll
+else
+LOCAL_MCS_FLAGS = $(MDOC_COMMON_FLAGS) \
+	/main:Mono.Documentation.MDoc   \
+	/r:Commons.Xml.Relaxng.dll      \
+	/r:System.Web.Services.dll
+PROGRAM = mdoc-net.exe
+all : copy-with-deps
+
+copy-with-deps:
+	-mkdir mdoc-net
+	cp $(PROGRAM) mdoc-net
+	cp $(topdir)/class/lib/net_2_0/Commons.Xml.Relaxng.dll mdoc-net
+	cp $(topdir)/class/lib/net_2_0/ICSharpCode.SharpZipLib.dll mdoc-net
+	cp $(topdir)/class/lib/net_2_0/Mono.Cecil.dll mdoc-net
+endif
 
 MONODOC_RESOURCES = \
 	../monodoc/Resources/mdoc-html-utils.xsl    \
@@ -40,9 +60,7 @@ EXTRA_DISTFILES = \
 	$(MDOC_RESOURCES) \
 	$(MDOC_TEST_FILES)
 
-PROGRAM = mdoc.exe
-
-$(PROGRAM) : $(MDOC_RESOURCES) $(MONODOC_RESOURCES) $(topdir)/class/lib/net_2_0/monodoc.dll
+$(PROGRAM) : $(MDOC_RESOURCES) $(MONODOC_RESOURCES) $(PROGRAM_DEPS)
 
 include ../../build/executable.make
 
@@ -84,121 +102,121 @@ Test/DocTest.dll-v2:
 	-rm -f Test/DocTest.dll
 	$(MAKE) TEST_CSCFLAGS=$(TEST_CSCFLAGS) Test/DocTest.dll
 
-check-monodocer-update: mdoc.exe
+check-monodocer-update: $(PROGRAM)
 	find Test/en.expected -name \*.xml -exec rm "{}" \;
 	$(MAKE) Test/DocTest.dll-v1
-	$(MONO) mdoc.exe update --exceptions=all -o Test/en.expected Test/DocTest.dll
+	$(MONO) $(PROGRAM) update --exceptions=all -o Test/en.expected Test/DocTest.dll
 
-check-monodocer: mdoc.exe
+check-monodocer: $(PROGRAM)
 	-rm -Rf Test/en.actual
 	$(MAKE) Test/DocTest.dll-v1
-	$(MONO) mdoc.exe update --exceptions=all -o Test/en.actual Test/DocTest.dll
+	$(MONO) $(PROGRAM) update --exceptions=all -o Test/en.actual Test/DocTest.dll
 	diff --exclude=.svn -rup Test/en.expected Test/en.actual
-	$(MONO) mdoc.exe update --exceptions=all -o Test/en.actual Test/DocTest.dll 
+	$(MONO) $(PROGRAM) update --exceptions=all -o Test/en.actual Test/DocTest.dll 
 	diff --exclude=.svn -rup Test/en.expected Test/en.actual
 
-check-monodocer-since-update: mdoc.exe
+check-monodocer-since-update: $(PROGRAM)
 	find Test/en.expected.since -name \*.xml -exec rm "{}" \;
 	$(MAKE) Test/DocTest.dll-v1
-	$(MONO) mdoc.exe update --exceptions=all -o Test/en.expected.since Test/DocTest.dll 
+	$(MONO) $(PROGRAM) update --exceptions=all -o Test/en.expected.since Test/DocTest.dll 
 	$(MAKE) Test/DocTest.dll-v2
-	$(MONO) mdoc.exe update --exceptions=all --since="Version 2.0" \
+	$(MONO) $(PROGRAM) update --exceptions=all --since="Version 2.0" \
 		-o Test/en.expected.since Test/DocTest.dll 
 
-check-monodocer-since: mdoc.exe
+check-monodocer-since: $(PROGRAM)
 	rm -Rf Test/en.actual
 	$(MAKE) Test/DocTest.dll-v1
-	$(MONO) mdoc.exe update --exceptions=all -o Test/en.actual Test/DocTest.dll 
+	$(MONO) $(PROGRAM) update --exceptions=all -o Test/en.actual Test/DocTest.dll 
 	$(MAKE) Test/DocTest.dll-v2
-	$(MONO) mdoc.exe update --exceptions=all --since="Version 2.0" \
+	$(MONO) $(PROGRAM) update --exceptions=all --since="Version 2.0" \
 		-o Test/en.actual Test/DocTest.dll 
 	diff --exclude=.svn -rup Test/en.expected.since Test/en.actual
 
-check-monodocer-importslashdoc-update: mdoc.exe
+check-monodocer-importslashdoc-update: $(PROGRAM)
 	find Test/en.expected.importslashdoc -name \*.xml -exec rm "{}" \;
 	$(MAKE) Test/DocTest.dll-v1 TEST_CSCFLAGS=-doc:Test/DocTest.xml
-	$(MONO) mdoc.exe update --exceptions=all -i Test/DocTest.xml \
+	$(MONO) $(PROGRAM) update --exceptions=all -i Test/DocTest.xml \
 		-o Test/en.expected.importslashdoc Test/DocTest.dll 
 
-check-monodocer-importslashdoc: mdoc.exe
+check-monodocer-importslashdoc: $(PROGRAM)
 	rm -Rf Test/en.actual
 	$(MAKE) Test/DocTest.dll-v1 TEST_CSCFLAGS=-doc:Test/DocTest.xml
-	$(MONO) mdoc.exe update --exceptions=all -i Test/DocTest.xml \
+	$(MONO) $(PROGRAM) update --exceptions=all -i Test/DocTest.xml \
 		-o Test/en.actual Test/DocTest.dll 
 	diff --exclude=.svn -rup Test/en.expected.importslashdoc Test/en.actual
 
-check-monodocer-importecmadoc-update: mdoc.exe
+check-monodocer-importecmadoc-update: $(PROGRAM)
 	find Test/en.expected.importecmadoc -name \*.xml -exec rm "{}" \;
 	$(MAKE) Test/DocTest.dll-v1
-	$(MONO) mdoc.exe update --exceptions=all -i Test/TestEcmaDocs.xml \
+	$(MONO) $(PROGRAM) update --exceptions=all -i Test/TestEcmaDocs.xml \
 		'--type=System.Action`1' --type=System.AsyncCallback \
 		--type=System.Environment --type=System.Array \
 		-o Test/en.expected.importecmadoc Test/DocTest.dll 
 
-check-monodocer-importecmadoc: mdoc.exe
+check-monodocer-importecmadoc: $(PROGRAM)
 	rm -Rf Test/en.actual
 	$(MAKE) Test/DocTest.dll-v1
-	$(MONO) mdoc.exe update --exceptions=all -i Test/TestEcmaDocs.xml \
+	$(MONO) $(PROGRAM) update --exceptions=all -i Test/TestEcmaDocs.xml \
 		'--type=System.Action`1' --type=System.AsyncCallback \
 		--type=System.Environment --type=System.Array \
 		-o Test/en.actual Test/DocTest.dll 
 	diff --exclude=.svn -rup Test/en.expected.importecmadoc Test/en.actual
 
-check-mdoc-export-html-update: mdoc.exe
+check-mdoc-export-html-update: $(PROGRAM)
 	find Test/html.expected -name \*.html -exec rm "{}" \;
-	$(MONO) mdoc.exe export-html -o Test/html.expected \
+	$(MONO) $(PROGRAM) export-html -o Test/html.expected \
 		Test/en.expected.importslashdoc 
 
-check-mdoc-export-html: check-monodocer mdoc.exe
+check-mdoc-export-html: check-monodocer $(PROGRAM)
 	rm -Rf Test/html.actual
-	$(MONO) mdoc.exe export-html -o Test/html.actual \
+	$(MONO) $(PROGRAM) export-html -o Test/html.actual \
 		Test/en.expected.importslashdoc
 	diff --exclude=.svn -rup Test/html.expected Test/html.actual
 
-check-mdoc-export-html-with-version: mdoc.exe
+check-mdoc-export-html-with-version: $(PROGRAM)
 	rm -Rf Test/html.actual.v0 Test/html.actual.since-with-v0 .v0.txt .v2.txt
-	$(MONO) mdoc.exe export-html -o Test/html.actual.v0 \
+	$(MONO) $(PROGRAM) export-html -o Test/html.actual.v0 \
 		Test/en.expected
-	$(MONO) mdoc.exe export-html -o Test/html.actual.since-with-v0 \
+	$(MONO) $(PROGRAM) export-html -o Test/html.actual.since-with-v0 \
 		Test/en.expected.since -with-version 0.0.0.0
 	(cd Test/html.actual.v0            && find . -type f) | sort > .v0.txt
 	(cd Test/html.actual.since-with-v0 && find . -type f) | sort > .v2.txt
 	diff -rup .v0.txt .v2.txt   # assert no types added
 
-check-md-html-dir: mdoc.exe
+check-md-html-dir: $(PROGRAM)
 	rm -Rf Test/html.actual
-	$(MONO) mdoc.exe export-html -dest:Test/html.actual $(DIR) 
+	$(MONO) $(PROGRAM) export-html -dest:Test/html.actual $(DIR) 
 	diff --exclude=.svn -rup Test/html.expected Test/html.actual
 
 check-mdoc-export-msxdoc-update:
-	$(MONO) mdoc.exe export-msxdoc -o - Test/en.expected.importslashdoc \
+	$(MONO) $(PROGRAM) export-msxdoc -o - Test/en.expected.importslashdoc \
 		> Test/msxdoc-expected.importslashdoc.xml
 
 check-mdoc-export-msxdoc:
-	$(MONO) mdoc.exe export-msxdoc -o - Test/en.expected.importslashdoc \
+	$(MONO) $(PROGRAM) export-msxdoc -o - Test/en.expected.importslashdoc \
 		| diff --brief - Test/msxdoc-expected.importslashdoc.xml
 
 my_abs_top_srcdir = $(shell cd . && pwd)
 
-check-mdoc-validate-update: mdoc.exe
-	$(MONO) mdoc.exe validate -f ecma Test/en.expected 2>&1 | \
+check-mdoc-validate-update: $(PROGRAM)
+	$(MONO) $(PROGRAM) validate -f ecma Test/en.expected 2>&1 | \
 		sed 's#file://$(my_abs_top_srcdir)/##g' > \
 		Test/validate.check.monodocer
-	$(MONO) mdoc.exe validate -f ecma Test/en.expected.importslashdoc 2>&1 | \
+	$(MONO) $(PROGRAM) validate -f ecma Test/en.expected.importslashdoc 2>&1 | \
 		sed 's#file://$(my_abs_top_srcdir)/##g' > \
 		Test/validate.check.monodocer.importslashdoc
-	$(MONO) mdoc.exe validate -f ecma Test/en.expected.since 2>&1 | \
+	$(MONO) $(PROGRAM) validate -f ecma Test/en.expected.since 2>&1 | \
 		sed 's#file://$(my_abs_top_srcdir)/##g' > \
 		Test/validate.check.monodocer.since
 
-check-mdoc-validate: mdoc.exe
-	$(MONO) mdoc.exe validate -f ecma Test/en.expected 2>&1 | \
+check-mdoc-validate: $(PROGRAM)
+	$(MONO) $(PROGRAM) validate -f ecma Test/en.expected 2>&1 | \
 		sed 's#file://$(my_abs_top_srcdir)/##g' | \
 		diff - Test/validate.check.monodocer
-	$(MONO) mdoc.exe validate -f ecma Test/en.expected.importslashdoc 2>&1 | \
+	$(MONO) $(PROGRAM) validate -f ecma Test/en.expected.importslashdoc 2>&1 | \
 		sed 's#file://$(my_abs_top_srcdir)/##g' | \
 		diff --brief - Test/validate.check.monodocer.importslashdoc
-	$(MONO) mdoc.exe validate -f ecma Test/en.expected.since 2>&1 | \
+	$(MONO) $(PROGRAM) validate -f ecma Test/en.expected.since 2>&1 | \
 		sed 's#file://$(my_abs_top_srcdir)/##g' | \
 		diff --brief - Test/validate.check.monodocer.since
 
