* Makefile: When copying mdoc-net.exe into ./mdoc-net, rename it to 	  mdoc.exe so that .NET users continue to use the name 'mdoc'.  This 	  will make documentation easier, etc.
svn path=/trunk/mcs/; revision=146962

--- a/mdoc/Makefile
+++ b/mdoc/Makefile
@@ -30,7 +30,7 @@ all : copy-with-deps
 
 copy-with-deps:
 	-mkdir mdoc-net
-	cp $(PROGRAM) mdoc-net
+	cp $(PROGRAM) mdoc-net/mdoc.exe
 	cp $(topdir)/class/lib/net_2_0/Commons.Xml.Relaxng.dll mdoc-net
 	cp $(topdir)/class/lib/net_2_0/ICSharpCode.SharpZipLib.dll mdoc-net
 	cp $(topdir)/class/lib/net_2_0/Mono.Cecil.dll mdoc-net
