* Mono.Documentation/monodocs2html.cs: Enable debug output in 	  XslCompiledTransform when --debug is specified. 	* Resources/overview.xsl: Add xmlns, exclude-result-prefixes so that 	  .NET won't complain about the stylesheet.  (Why's it complain?) 	* Resources/stylesheet.xsl: .NET compatibility fixes: 	  - Use msxsl:node-set() when necessary. 	  - Change XPath expressions so that they work properly everywhere. 	* Makefile: Don't build an 'mdoc-net.exe' anymore, as the normal 	  mdoc.exe can now run normally under .NET.
svn path=/trunk/mcs/; revision=147495

--- a/mdoc/Makefile
+++ b/mdoc/Makefile
@@ -15,25 +15,21 @@ MDOC_COMMON_FLAGS = \
 	/r:ICSharpCode.SharpZipLib.dll                                              \
 	/r:$(topdir)/class/lib/net_2_0/Mono.Cecil.dll
 
-ifndef NET
 LOCAL_MCS_FLAGS = $(MDOC_COMMON_FLAGS) \
 	/r:$(topdir)/class/lib/net_2_0/monodoc.dll
 PROGRAM = mdoc.exe
 PROGRAM_DEPS = $(topdir)/class/lib/net_2_0/monodoc.dll
-else
-LOCAL_MCS_FLAGS = $(MDOC_COMMON_FLAGS) \
-	/main:Mono.Documentation.MDoc   \
-	/r:Commons.Xml.Relaxng.dll      \
-	/r:System.Web.Services.dll
-PROGRAM = mdoc-net.exe
+
+ifdef NET
 all : copy-with-deps
 
 copy-with-deps:
 	-mkdir mdoc-net
-	cp $(PROGRAM) mdoc-net/mdoc.exe
+	cp $(PROGRAM) mdoc-net
 	cp $(topdir)/class/lib/net_2_0/Commons.Xml.Relaxng.dll mdoc-net
 	cp $(topdir)/class/lib/net_2_0/ICSharpCode.SharpZipLib.dll mdoc-net
 	cp $(topdir)/class/lib/net_2_0/Mono.Cecil.dll mdoc-net
+	cp $(topdir)/class/lib/net_2_0/monodoc.dll mdoc-net
 endif
 
 MONODOC_RESOURCES = \
