* Makefile: Add System.Xml.Linq.dll to the referenced assemblies. 	* Mono.Documentation/webdoc.cs: Allow .source files to be provided to 	  'mdoc export-html-webdoc', which will cause the .source files to be 	  read and all referenced .tree/.zip files to be processed.
svn path=/trunk/mcs/; revision=155641

--- a/mdoc/Makefile
+++ b/mdoc/Makefile
@@ -12,6 +12,7 @@ MDOC_COMMON_FLAGS = \
 	/resource:Resources/overview.xsl,overview.xsl                               \
 	/resource:Resources/stylesheet.xsl,stylesheet.xsl                           \
 	/r:System.Web.dll                                                           \
+	/r:System.Xml.Linq.dll                                                      \
 	/r:ICSharpCode.SharpZipLib.dll                                              \
 	/r:$(topdir)/class/lib/net_4_0/Mono.Cecil.dll
 
