[genproj] Use an explicit IntermediateOutputPath to prevent rebuilds on cyclic assemblies

--- a/monodoc/monodoc-net_4_x.csproj
+++ b/monodoc/monodoc-net_4_x.csproj
@@ -9,6 +9,7 @@
     <OutputType>Library</OutputType>
     <NoWarn>618,612,672,809,1699,169,164,162,168,219,618,612</NoWarn>
     <OutputPath>./../../class/lib/net_4_x</OutputPath>
+    <IntermediateOutputPath>obj-net_4_x</IntermediateOutputPath>
     <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
     <NoStdLib>True</NoStdLib>
     
